# f1-fantasy-analysis

./: .gitignore  README.md  pnpm-lock.yaml  pyproject.toml
backend/: main.py
backend/analysis/: __init__.py  performance.py  polars_analysis.py
backend/api/: __init__.py  app.py  routes.py  server.py
backend/data/: README.md  __init__.py  create_prices_db.py  create_scoring_db.py  fantasy_scoring.py  fantasy_scoring_README.md  fantasy_scoring_example.py  fetcher.py  prices.py  sample_prices.py  scoring_rules.py  scrape_prices.py  scrape_scoring_rules.py
backend/utils/: config.py  logging.py
data/: README.md  create_prices_db.py  create_scoring_db.py  f1_fantasy.db  f1_fantasy_constructors.json  f1_fantasy_constructors_page.html  f1_fantasy_drivers.json  f1_fantasy_rules_full.html  f1_fantasy_scoring_rules.txt  prices.py  sample_prices.py  scrape_prices.py  scrape_scoring_rules.py  test_prices.py
f1-fantasy-webapp/: README.md  package.json
f1-fantasy-webapp/src/app/: layout.tsx  providers.tsx
src/: __init__.py  main.py
src/analysis/: performance.py  polars_analysis.py
src/api/: app.py  routes.py  server.py
src/app/: layout.tsx  page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/analysis/: page.tsx
src/app/(dashboard)/drivers/: page.tsx
src/app/(dashboard)/simulator/: page.tsx
src/data/: fetcher.py  models.py
src/lib/: store.ts
src/lib/api/: client.ts
src/utils/: __init__.py  logging.py
tests/: __init__.py  test_api.py  test_models.py  test_polars_analysis.py  test_prices.py  test_scoring_rules.py
(+1 files in other folders)
