[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1-fantasy-analysis"
version = "0.1.0"
description = "Analysis tools and API for F1 fantasy data"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "F1 Fantasy Team"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pandas>=2.1.1",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.2",
    "httpx>=0.25.0",
    "pytest>=7.4.2",
    "polars>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.292",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

